# K-Line

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DEPLOY.md  PROJECT_PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.bat  stop.bat
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: aggregation_schemes.py  auth.py  chart.py  data.py  data_update.py  strategy.py  users.py  watchlist.py
backend/app/models/: auth.py  data_update.py
backend/app/services/: audit_log_service.py  data_service.py  data_update_service.py
deploy/: backend.Dockerfile  nginx.conf.template
docs/: NEXT_STEPS.md  ROADMAP.md  STRATEGY_TEMPLATE.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/api/: data.ts  dataUpdate.ts
frontend/src/components/: KlineChart.vue
frontend/src/stores/: stockData.ts
frontend/src/utils/: resample.ts  stockSearch.ts
frontend/src/views/: ChartView.vue  DataManagement.vue  DataUpdateManagement.vue  StrategyAnalysis.vue  StrategyCompare.vue  (+1 more)
scripts/: analyze_strategy.py  demo_strategy.py  export_data.py  fetch_data.py  plot_kline.py  run_strategy.py  setup.py
src/: __init__.py
src/config/: __init__.py  settings.py
src/data_fetcher/: __init__.py  fetcher.py  stock_list.py
src/data_storage/: __init__.py  export.py  postgres_storage.py  sqlite_storage.py  storage.py  strategy_export.py
src/strategy/: __init__.py  base.py  manager.py  statistics.py
src/utils/: __init__.py  date_utils.py  logger.py
src/visualization/: __init__.py  kline.py
(+10 files in other folders)
